--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "target": "esnext",
     "moduleResolution": "node",
+    "jsx": "react",
   },
   "include": [],
   "exclude": [],
