--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --passWithNoTests --config jest.config.ts",
     "eslint": "eslint --no-eslintrc -c .eslintrc.json --fix '**/src/*.{js,jsx,ts,tsx}'",
     "eslint:ci": "eslint --no-eslintrc -c .eslintrc.json '**/src/*.{js,jsx,ts,tsx}'",
-    "format": "prettier",
+    "prettier": "prettier '**/{examples,src,__tests__,website}/**/*.{js,jsx,ts,tsx,md}' --write",
+    "prettier:ci": "prettier '**/{examples,src,__tests__,website}/**/*.{js,jsx,ts,tsx,md}' --list-different",
     "build": "concurrently 'pnpm:build:*'",
     "build:jotai": "rollup -c --package jotai",
     "build:zustand": "rollup -c --package zustand",
