--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint:ci": "eslint --no-eslintrc -c .eslintrc.json '**/src/*.{js,jsx,ts,tsx}'",
     "prettier": "prettier '**/{examples,src,__tests__,website}/**/*.{js,jsx,ts,tsx,md}' --write",
     "prettier:ci": "prettier '**/{examples,src,__tests__,website}/**/*.{js,jsx,ts,tsx,md}' --list-different",
+    "typecheck:ci": "pnpm -r --parallel run typecheck",
     "build": "concurrently 'pnpm:build:*'",
     "build:jotai": "rollup -c --package jotai",
     "build:zustand": "rollup -c --package zustand",
@@ -55,6 +56,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.9.6",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
