--- a/packages/react-query/tsconfig.json
+++ b/packages/react-query/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "paths": {
       "react-query": ["./src/index.ts"],
+      "react-query/*": ["./src/*.ts"],
     },
   },
   "include": ["src"],
