--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "target": "esnext",
     "moduleResolution": "bundler",
     "noEmit": true,
-    "jsx": "react"
-  }
+    "jsx": "react-jsx",
+  },
 }
