--- a/.github/workflows/lint-and-type.yml
+++ b/.github/workflows/lint-and-type.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Lint
         run: pnpm run eslint:ci
       - name: Type
-        run: pnpm run typecheck:ci
+        run: pnpm run typecheck
