--- a/packages/react-query/tsconfig.json
+++ b/packages/react-query/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
       "react-query": ["./src/index.ts"],
