--- a/packages/valtio/tsconfig.json
+++ b/packages/valtio/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
       "valtio": ["./src/index.ts"],
+      "valtio/*": ["./src/*.ts"],
     },
   },
   "include": ["src"],
