--- a/packages/jotai/tsconfig.json
+++ b/packages/jotai/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "paths": {
       "jotai": ["./src/index.ts"],
+      "jotai/*": ["./src/*.ts"],
     },
   },
   "include": ["src"],
