--- a/packages/zustand/package.json
+++ b/packages/zustand/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config jest.config.ts",
+    "test": "jest --passWithNoTests --config jest.config.ts",
     "typecheck": "tsc"
   },
   "exports": {
