--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "state-management-monorepo",
-  "version": "1.0.0",
-  "description": "",
   "private": true,
-  "license": "ISC",
-  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/q-u-n/state-management-collection.git"
+  },
   "scripts": {
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "changeset publish",
     "test": "jest --passWithNoTests --config jest.config.ts",
     "eslint": "eslint --no-eslintrc -c .eslintrc.json --fix '**/src/*.{js,jsx,ts,tsx}'",
     "eslint:ci": "eslint --no-eslintrc -c .eslintrc.json '**/src/*.{js,jsx,ts,tsx}'",
@@ -27,6 +30,8 @@
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-env": "^7.23.9",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
     "@jest/types": "^29.6.3",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
