--- a/packages/zustand/package.json
+++ b/packages/zustand/package.json
@@ -1,11 +1,15 @@
 {
   "name": "custom-zustand",
   "version": "1.0.0",
-  "description": "",
+  "description": "A custom implementation of Zustand",
+  "author": "q-u-n",
   "type": "module",
-  "main": "index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "jest --passWithNoTests --config jest.config.ts",
+    "build": "pnpm run -w build:zustand",
     "typecheck": "tsc"
   },
   "exports": {
@@ -28,17 +32,18 @@
     "zustand"
   ],
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "sideEffects": false,
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "shared": "workspace:*",
-    "use-sync-external-store": "^1.2.0",
-    "zustand": "^4.5.0"
+    "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
-    "@types/use-sync-external-store": "^0.0.6"
+    "@types/use-sync-external-store": "^0.0.6",
+    "zustand": "^4.5.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0"
   }
 }
