--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,6 +3,7 @@
     "@changesets/changelog-github",
     { "repo": "q-u-n/state-management-collection" }
   ],
+  "commit": false,
   "access": "public",
   "baseBranch": "main",
   "tag": true
