--- a/packages/react-query/package.json
+++ b/packages/react-query/package.json
@@ -33,7 +33,5 @@
   ],
   "sideEffects": false,
   "license": "ISC",
-  "dependencies": {
-    "shared": "workspace:*"
-  }
+  "dependencies": {}
 }
