--- a/packages/jotai/package.json
+++ b/packages/jotai/package.json
@@ -6,6 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --passWithNoTests --config jest.config.ts",
+    "build": "pnpm run -w build:jotai",
+    "prepublishOnly": "pnpm run build",
     "typecheck": "tsc"
   },
   "exports": {
@@ -31,6 +33,9 @@
     "dist"
   ],
   "sideEffects": false,
-  "license": "ISC",
-  "dependencies": {}
+  "license": "MIT",
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "^17.0.0"
+  }
 }
