chore: update todos config

--- a/examples/valtio/todos/package.json
+++ b/examples/valtio/todos/package.json
@@ -3,19 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.95",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.24",
+    "@react-spring/web": "^9.7.3",
+    "antd": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "valtio": "^2.0.0-beta.3",
-    "web-vitals": "^2.1.4"
+    "valtio": "^2.0.0-beta.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
