--- a/packages/react-query/package.json
+++ b/packages/react-query/package.json
@@ -1,7 +1,8 @@
 {
   "name": "custom-react-query",
   "version": "1.0.0",
-  "description": "",
+  "description": "A custom implementation of Tanstack Query",
+  "author": "q-u-n",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -30,10 +31,21 @@
     "react-query"
   ],
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "sideEffects": false,
   "license": "MIT",
-  "dependencies": {}
+  "engines": {
+    "node": ">=12.7.0"
+  },
+  "contributors": [],
+  "bugs": {
+    "url": "https://github.com/q-u-n/state-management-collection/issues"
+  },
+  "homepage": "https://github.com/q-u-n/state-management-collection",
+  "dependencies": {},
+  "devDependencies": {},
+  "peerDependencies": {
+    "react": ">=18.0"
+  }
 }
