--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.9.6",
+    "rollup-plugin-banner2": "^1.3.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "ts-jest": "^29.1.1",
