--- a/packages/jotai/package.json
+++ b/packages/jotai/package.json
@@ -9,7 +9,10 @@
     "test": "jest --passWithNoTests --config jest.config.ts",
     "build": "pnpm run -w build:jotai",
     "prepublishOnly": "pnpm run build",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "benchmarks": "pnpm run '/^benchmark:.*/'",
+    "benchmark:read": "tsx benchmarks/simple-read.ts",
+    "benchmark:write": "tsx benchmarks/simple-write.ts"
   },
   "exports": {
     ".": {
@@ -43,8 +46,9 @@
     "url": "https://github.com/q-u-n/state-management-collection/issues"
   },
   "homepage": "https://github.com/q-u-n/state-management-collection",
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "tsx": "^4.16.2"
+  },
   "peerDependencies": {
     "react": ">=17.0.0"
   }
