--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Create Comment
         uses: peter-evans/create-or-update-comment@v2
         with:
-          issue-number: ${{ github.env.pull_request.number }}
+          issue-number: ${{ github.event.pull_request.number }}
           body: |
             ## Benchmark Results
             $(cat table.md)
