--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -39,11 +39,11 @@ jobs:
               echo "" >> table.md
             fi
           done
+      - name: Read table.md
+        id: table_content
+        run: echo "TABLE_CONTENT=$(cat table.md)" >> $GITHUB_ENV
       - name: Create Comment
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            ## Benchmark Results
-            $(cat table.md)
-          shell: bash
+          body: ${{ env.TABLE_CONTENT }}
