--- a/examples/graphql/apollo-client-ts/package.json
+++ b/examples/graphql/apollo-client-ts/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "main": "src/index.tsx",
   "dependencies": {
+    "@apollo/client": "^3.11.4",
+    "graphql": "^16.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
