--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "nx": "20.3.1"
   }
 }
